<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/password_wrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_wrong"
        android:textColor="@color/mp_red"
        android:visibility="gone"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/patientname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_signup_name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_signup_id_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_signup_pw_hint"
        android:inputType="textPassword" />

</LinearLayout>